Add DATABASE_PREFIX env variable

--- a/config/apache/vhost.conf
+++ b/config/apache/vhost.conf
@@ -17,6 +17,7 @@
     SetEnv SAMPLE_DATABASE_LOGIN "SAMPLE_DATABASE_LOGIN"
     SetEnv SAMPLE_DATABASE_PASS "SAMPLE_DATABASE_PASS"
     SetEnv SAMPLE_DATABASE_HOST "SAMPLE_DATABASE_HOST"
+    SetEnv SAMPLE_DATABASE_PREFIX "SAMPLE_DATABASE_PREFIX"
     SetEnv SAMPLE_DATABASE_PORT ""
 
     <Directory /var/www/drupal-build/src>
